Implemented basic redux

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
     "no-underscore-dangle": ["off"],
     "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/prefer-stateless-function": "off"
+    "react/prop-types": [0, {}]
   },
   "env": {
     "browser": true,
