--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+  "parser": "babel-eslint",
   "extends": "airbnb",
   "rules" :{
     "object-shorthand": ["error", "consistent"],
@@ -7,6 +8,7 @@
     "arrow-body-style": ["off"],
     "prefer-promise-reject-errors": ["off"],
     "no-underscore-dangle": ["off"],
+    "no-bitwise": ["error", { "int32Hint": true }],
     "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prop-types": [0, {}]
